# enterprise-rag-evaluation-lab

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
architecture/: architecture.md  data-flow.md  star-story.md
config/: evaluation_rules.yaml  retrieval_rules.yaml  settings.yaml
docs/: business-problem.md  data-dictionary.md  demo-script.md  github-profile-setup.md  implementation-plan.md  linkedin-post.md  metrics.md  recruiter-summary.md  release-notes.md  sample-outputs.md  technical-deep-dive.md
docs/screenshots/: answer-with-citations.md  executive-overview.md  golden-question-results.md  hallucination-risk.md  rag-evaluation-metrics.md  search-lab.md
src/api/: main.py
src/chunking/: chunker.py  metadata.py
src/common/: config.py  logging.py  paths.py
src/dashboard/: app.py
src/data_generation/: generate_documents.py  generate_golden_questions.py
src/evaluation/: answer_metrics.py  evaluator.py  retrieval_metrics.py
src/ingestion/: loaders.py  normalizer.py
src/pipeline/: run_all.py
src/rag/: answer.py  citations.py  risk.py
src/retrieval/: index.py  rerank.py  search.py
tests/evaluation/: test_metrics.py  test_v02_reports.py
tests/integration/: test_pipeline_api.py
tests/unit/: test_dashboard.py  test_generation.py  test_ingestion_chunking.py  test_retrieval_answer.py
