[project]
name = "enterprise-rag-evaluation-lab"
version = "0.1.0"
description = "Synthetic enterprise document intelligence and RAG evaluation lab."
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
